exports[`TimerModeToggleButton renders an active component when the clock is in timer mode 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "background": "#34495e",
      "border": 0,
      "color": "#ecf0f1",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "padding": 0,
      "width": 50,
    }
  }>
  <svg
    fill="currentColor"
    fit={true}
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m20 33.4q4.8 0 8.2-3.5t3.4-8.3-3.4-8.2-8.2-3.4-8.2 3.4-3.4 8.2 3.4 8.3 8.2 3.5z m0-26.8q6.3 0 10.6 4.5t4.4 10.5-4.4 10.6-10.6 4.4-10.6-4.4-4.4-10.6 4.4-10.5 10.6-4.5z m0.9 6.8v8.7l6.6 3.9-1.2 2.1-7.9-4.7v-10h2.5z m-7.8-7.8l-7.6 6.4-2.1-2.5 7.6-6.4z m23.5 3.9l-2.1 2.6-7.6-6.5 2.1-2.5z" />
    </g>
  </svg>
</button>
`;

exports[`TimerModeToggleButton renders the component 1`] = `
<button
  disabled={false}
  onClick={[Function]}
  style={
    Object {
      "background": "transparent",
      "border": 0,
      "color": "#bdc3c7",
      "cursor": "pointer",
      "fontSize": "2rem",
      "height": 50,
      "lineHeight": 1,
      "padding": 0,
      "width": 50,
    }
  }>
  <svg
    fill="currentColor"
    fit={true}
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "verticalAlign": "top",
      }
    }
    viewBox="0 0 40 40"
    width="1em">
    <g>
      <path
        d="m20 33.4q4.8 0 8.2-3.5t3.4-8.3-3.4-8.2-8.2-3.4-8.2 3.4-3.4 8.2 3.4 8.3 8.2 3.5z m0-26.8q6.3 0 10.6 4.5t4.4 10.5-4.4 10.6-10.6 4.4-10.6-4.4-4.4-10.6 4.4-10.5 10.6-4.5z m0.9 6.8v8.7l6.6 3.9-1.2 2.1-7.9-4.7v-10h2.5z m-7.8-7.8l-7.6 6.4-2.1-2.5 7.6-6.4z m23.5 3.9l-2.1 2.6-7.6-6.5 2.1-2.5z" />
    </g>
  </svg>
</button>
`;
